# x.retrieval

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
docs/: index.md  quickstart.md  usage.md
nbs/: blip2.ipynb  blip2_caption.ipynb  blip2_captioned_coco_val_2017.parquet  quickstart.ipynb  read_coco.ipynb  results_df.ipynb  results_df.parquet  runtime_comparison.ipynb  timm.ipynb  visualize.ipynb  vlrm_captioned_coco_val_2017.parquet  vlrm_generate_caption.ipynb  xretrieval.ipynb
quickstart/: index.html
search/: search_index.json
usage/: index.html
xretrieval/: __init__.py  core.py  models_registry.py  registry.py  rrf.py
xretrieval/datasets/: coco.py
xretrieval/models/: __init__.py  base.py  blip2.py  sentence_transformers.py  st.py  timm.py
