[project]
name = "xretrieval"
version = "0.1.0"
description = "Retrieve and Evaluate with X(any) models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["retrieval", "evaluation", "machine-learning", "multi-modal"]
authors = [
    { name = "Dickson Neoh", email = "dickson.neoh@gmail.com" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torchmetrics>=1.6.0",
    "Pillow>=11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/dnth/x.retrieval"
"Bug Tracker" = "https://github.com/dnth/x.retrieval/issues"

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
multi-line-output = 3 
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]
